minor spacing fixes

--- a/css/experience.css
+++ b/css/experience.css
@@ -102,6 +102,7 @@
 	overflow: hidden;
 	background-color: var(--background);
 	box-shadow: 0 0 0 8px var(--background);
+	margin-top: 24px;
 }
 
 .experience .timeline-item-icon img {
@@ -112,8 +113,6 @@
 }
 
 .experience .card {
-	margin-top: -24px;
-	margin-bottom: 36px;
 	color: var(--navy-blue-light);
 	border: 3px solid var(--navy-blue);
 	box-shadow: 0 4px 4px 0 var(--navy-blue-light);
